fixtures/cs-hash-01/bad/destructuring-require-md5.js
const { createHash } = require("crypto");

function hashPassword(password) {
	return createHash("md5").update(password).digest("hex");
}

module.exports = { hashPassword };
